ajout api recherche
